# seal-kms

./: .envrc  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  USAGE.md  biome.json  config.example.yaml  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: move.yml  publish.yaml  rust.yml
app/: attestation-validator.ts  config.ts  enclave-key-service.ts  entrypoint.sh  index.ts  master-key.ts  register-enclave.ts
move/app/: Move.toml  Published.toml
move/app/sources/: kms.move
move/enclave/: Move.toml  Published.toml
move/enclave/sources/: enclave.move
scripts/: create_debug_enclave_config.sh  create_enclave_config.sh  license_check.sh  load-pcrs.sh  register_enclave.sh  update_pcrs.sh  update_stagex.sh
src/aws/: Cargo.toml
src/aws/src/: lib.rs
src/host-proxy/: Cargo.toml
src/host-proxy/src/: config.rs  main.rs  proxy.rs  transparent_proxy.rs
src/init/: Cargo.toml  init.rs
src/nautilus-server/: Cargo.toml
src/nautilus-server/src/: app.rs  common.rs  dns.rs  lib.rs  main.rs  proxy.rs
src/system/: Cargo.toml
