[workspace]
resolver = "2"
members = [
  "src/aws",
  "src/init",
  "src/system",
  "src/nautilus-server",
  "src/host-proxy"
]

[workspace.dependencies]
# Common dependencies used across multiple crates
libc = "0.2.175"

# Serde ecosystem
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_yaml = "0.9.33"

# Async and networking
anyhow = "1.0.100"
nix = { version = "0.30.1", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
vsock = "0.5.2"

# AWS Nitro
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package = "aws-nitro-enclaves-nsm-api" }
nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package = "nsm-lib" }
