[package]
name = "aws"
version = "0.1.0"
resolver = "2"
edition = "2024"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { workspace = true }
nsm_lib = { workspace = true }
nsm_api = { workspace = true }
system = { path = "../system"}
