[package]
name = "host-proxy"
version = "0.1.0"
edition = "2024"
license = "ISC"

[dependencies]
anyhow = { workspace = true }
hickory-resolver = "0.25.2"
nix = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
vsock = { workspace = true }

[[bin]]
name = "host-proxy"
path = "src/main.rs"
