[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2024"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
bcs = "0.1.6"
hickory-server = "0.25.2"
hickory-proto = "0.25.2"
nix = { workspace = true }
rand = "0.8.5"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
vsock = { workspace = true }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["aes"] }
nsm_api = { workspace = true }

[[bin]]
name = "nautilus-server"
path = "src/main.rs"
